# RayTracer

./: CMakeLists.txt  Main.cpp  Makefile  README.md  cmake_install.cmake  config.txt  raytracer
Factory/: Factory.cpp  Factory.hpp
Lights/: ILights.cpp  ILights.hpp
Parser/: Init.hpp  Parser.cpp  Parser.hpp
Primitives/: IPrimitives.hpp  Plane.cpp  Sphere.cpp
Raytracing/: Raytracer.cpp  Raytracer.hpp
SFML/: SFML.cpp  SFML.hpp
Transformation/: Transformation.cpp  Transformation.hpp
Vector3D/: Vector3D.hpp
